# diesel-rust

./: Cargo.toml  README.md  example.env
migrations/2022-09-27-074708_crear_usuario/: down.sql  up.sql
migrations/2022-09-28-150110_crear_mapa/: down.sql  up.sql
src/: consulta.rs  lib.rs  models.rs  schema.rs
